# gomoku

./: CMakeLists.txt  Makefile  main.cpp
headers/: APlayer.hpp  ArtificialIntelligence.hpp  AvailableSpot.hpp  BoardState.hpp  ComputerPlayer.hpp  Coordinates.hpp  GomokuGame.hpp  GomokuMainBoard.hpp  HumanPlayer.hpp  MainHeader.hpp  SDLTextureClass.hpp  SingleStone.hpp  View.hpp  Widget.hpp  WidgetButton.hpp  WidgetButtonGroup.hpp  WidgetLabel.hpp
src/: APlayer.cpp  AiMove.cpp  ArtificialIntelligence.cpp  AvailableSpot.cpp  ComputerPlayer.cpp  Coordinates.cpp  GomokuGame.cpp  GomokuMainBoard.cpp  GomokuMainBoard.hpp  HumanPlayer.cpp  HumanVsCompute.cpp  MainHeader.hpp  SDLTextureClass.cpp  SingleStone.cpp  SingleStone.hpp  View.cpp  Widget.cpp  WidgetButton.cpp  WidgetButtonGroup.cpp  WidgetLabel.cpp  WidgetMenuField.cpp  main.cpp
